--- a/lessons/06-css-development-style/twoter/package.json
+++ b/lessons/06-css-development-style/twoter/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.4.3",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "passport-local-with-redirect": "^0.1.6",
