--- a/lessons/06-css-development-style/twoter/package.json
+++ b/lessons/06-css-development-style/twoter/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "karma": "./node_modules/karma/bin/karma start karma.conf.js",
+    "mocha": "./node_modules/mocha/bin/mocha tests/server",
+    "cover-mocha": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha tests/server -- -R spec",
+    "test": "npm run karma && npm run cover-mocha",
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "async": "^1.5.2",
@@ -22,5 +26,20 @@
     "passport-local-mongoose": "^4.0.0",
     "passport-local-with-redirect": "^0.1.6",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^2.0.0",
+    "istanbul": "^0.3.5",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.1.0",
+    "sinon": "^1.12.2",
+    "supertask": "^2.1.0",
+    "supertest": "^1.2.0"
   }
 }
